# rust-fp-library

./: .envrc  .git-blame-ignore-revs  .gitignore  .prettierrc.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  deny.toml  justfile  patch_prism.sh  rustfmt.toml  todo.md  tombi.toml
fp-library/: .gitignore  CHANGELOG.md  Cargo.toml
fp-library/benches/: benchmarks.rs
fp-library/benches/benchmarks/: arc_free.rs  arc_free_explicit.rs  cat_list.rs  cat_queue.rs  coyoneda.rs  free.rs  free_explicit.rs  free_family_comparison.rs  functions.rs  lazy.rs  once_cell.rs  once_lock.rs  option.rs  pair.rs  rc_free.rs  rc_free_explicit.rs  ref_dispatch.rs  result.rs  string.rs  vec.rs
fp-library/docs/: architecture.md  benchmarking.md  brand-dispatch-traits.md  brand-inference.md  coyoneda.md  dispatch.md  features.md  hkt.md  impl-trait-vs-named-generics.md  lazy-evaluation.md  lifetime-ablation-experiment.md  limitations-and-workarounds.md  optics-analysis.md  parallelism.md  pointer-abstraction.md  profunctor-analysis.md  project-structure.md  references.md  release-process.md  std-coverage-checklist.md  zero-cost.md
fp-library/src/: aliases.rs  brands.rs  classes.rs  dispatch.rs  docs.rs  functions.rs  hkt.rs  kinds.rs  lib.rs  macros.rs  main copy 2.rs  main copy 3.rs  main copy 4.rs  main copy 5.rs  main copy.rs  main.rs  typeclasses.rs  types.rs  utils.rs
fp-library/src/brands/: optics.rs
fp-library/src/classes/: alt.rs  alternative.rs  applicative.rs  apply.rs  apply_first.rs  apply_second.rs  arrow.rs  bifoldable.rs  bifunctor.rs  bind.rs  bitraversable.rs  category.rs  choice.rs  clonable_fn.rs  clone_fn.rs  cloneable_fn.rs  closed.rs  commutative_ring.rs  comonad.rs  compactable.rs  contravariant.rs  default_brand.rs  default_brand_impls.rs  defer.rs  deferrable.rs  dispatch.rs  division_ring.rs  euclidean_ring.rs  evaluable.rs  extend.rs  extract.rs  field.rs  filterable.rs  filterable_with_index.rs  foldable.rs  foldable_with_index.rs  function.rs  functor.rs  functor_dispatch.rs  functor_with_index.rs  (+104 more)
fp-library/src/dispatch/: alt.rs  apply_first.rs  apply_second.rs  bi_fold_left.rs  bi_fold_map.rs  bi_fold_right.rs  bifoldable.rs  bifunctor.rs  bimap.rs  bitraversable.rs  compact.rs  compactable.rs  contravariant.rs  filter.rs  filter_map_with_index.rs  filter_with_index.rs  filterable.rs  filterable_with_index.rs  fold_left_with_index.rs  fold_map_with_index.rs  fold_right_with_index.rs  foldable.rs  foldable_with_index.rs  functor.rs  functor_with_index.rs  inference.rs  join.rs  lift.rs  map_first.rs  map_second.rs  partition.rs  partition_map.rs  partition_map_with_index.rs  partition_with_index.rs  semiapplicative.rs  semimonad.rs  separate.rs  traversable.rs  traversable_with_index.rs  traverse_with_index.rs  (+3 more)
fp-library/src/docs/: architecture.rs  benchmarking.rs  brand_dispatch_traits.rs  brand_inference.rs  coyoneda.rs  (+16 more)
fp-library/tests/: ado_notation.rs  arc_run_normalization_probe.rs  brand_inference_feasibility.rs  brand_inference_integration.rs  closure_directed_inference_poc.rs  closureless_dispatch_poc.rs  compile_fail.rs  coproduct_brand_probe.rs  dispatch_borrow_feasibility.rs  do_notation.rs  document_fields_example.rs  effects_macro.rs  free_explicit_poc.rs  handlers_macro.rs  hkt_integration.rs  im_do.rs  lifetime_turbofish_test.rs  loom_tests.rs  multi_brand_integration.rs  non_regression_single_brand.rs  optics_test.rs  poc_apply_unified_dispatch.rs  poc_fn_brand_inference.rs  pointer_integration.rs  pointer_non_regression.rs  property_tests.rs  ref_borrow_feasibility.rs  ref_traverse_direct.rs  run_interpret.rs  run_interpret_rec.rs  run_interpret_with.rs  run_lift.rs  run_row_canonicalisation.rs  run_wrap_depth_probe.rs  slot_apply_poc.rs  slot_arity2_poc.rs  slot_assoc_marker_poc.rs  slot_bind_poc.rs  slot_closureless_poc.rs  slot_generic_fixed_param_poc.rs  (+6 more)
fp-macros/: CHANGELOG.md  Cargo.toml  README.md
fp-macros/src/: a_do.rs  ado_notation.rs  analysis.rs  apply.rs  canonicalize.rs  codegen.rs  conversion.rs  core.rs  def_kind.rs  do_notation.rs  doc_params.rs  doc_type_params.rs  doc_utils.rs  document_impl.rs  document_module.rs  documentation.rs  effects.rs  error.rs  function_utils.rs  generate.rs  hkt.rs  hm.rs  hm_ast.rs  hm_signature.rs  impl_kind.rs  lib.rs  m_do.rs  parse.rs  property_tests.rs  re_export.rs  reexport.rs  resolution.rs  support.rs  tests.rs
fp-macros/tests/: apply_integration.rs  compile_fail.rs  doc_macros.rs  document_fields_integration.rs  document_module_tests.rs  document_module_validation_tests.rs  integration.rs  repro_issues.rs
poc-effect-row/: Cargo.toml  README.md
poc-effect-row/macros/: Cargo.toml
poc-effect-row/src/: lib.rs
poc-effect-row/tests/: coyoneda.rs  feasibility.rs
(+806 files in other folders)
