[package]
name = "fp-library"
version = "0.1.1"
edition = "2024"
description = "A functional programming library for Rust featuring your favourite higher-kinded types and type classes."
readme = "../README.md"
repository = "https://github.com/nothingnesses/rust-fp-library"
license = "BlueOak-1.0.0"
keywords = ["functional", "higher-kinded", "types"]
categories = ["algorithms", "data-structures", "rust-patterns"]
workspace = "../"

[package.metadata.docs.rs]
all-features = true


[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
quickcheck = "1"
quickcheck_macros = "1"

[[bench]]
name = "benchmarks"
harness = false