[package]
name = "fp-library"
version = "0.5.0"
edition = "2024"
description = "A functional programming library for Rust featuring your favourite higher-kinded types and type classes."
readme = "../README.md"
repository = "https://github.com/nothingnesses/rust-fp-library"
license = "BlueOak-1.0.0"
keywords = ["functional", "higher-kinded", "hkt", "types"]
categories = ["algorithms", "data-structures", "rust-patterns"]
workspace = "../"

[package.metadata.docs.rs]
all-features = true

[[bench]]
harness = false
name = "benchmarks"

[features]
default = []
# Enable parallel folding operations using Rayon
rayon = ["dep:rayon"]

[dependencies]
fp-macros = { path = "../fp-macros", version = "0.2" }
rayon = { version = "1.11", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
quickcheck = "1.0"
quickcheck_macros = "1.1"
trybuild = "1.0"
