[package]
name = "fp-macros"
version = "0.3.3"
edition = "2024"
description = "Procedural macros for generating and working with Higher-Kinded Type (HKT) traits in the fp-library crate."
repository = "https://github.com/nothingnesses/rust-fp-library"
license = "BlueOak-1.0.0"
keywords = ["macro", "proc-macro", "procedural", "types"]
categories = ["encoding"]
workspace = "../"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = {version = "1.0", features = ["span-locations"]}
quote = "1.0"
rapidhash = "4.2"
serde = { version = "1.0", features = ["derive"] }
syn = { version = "2.0", features = ["extra-traits", "full", "visit", "visit-mut"] }
toml = "0.9"

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.1"
trybuild = "1.0"
